[package]
name = "akuma"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "akuma"
bench = false
test = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
talc = "4"
spinning_top = "0.3"
fdt = "0.1"
smoltcp = { version = "0.11", default-features = false, features = ["log", "async", "proto-ipv4", "socket-tcp", "socket-udp", "medium-ethernet"] }
virtio-drivers = { version = "0.7", default-features = false }
arm_pl031 = "0.2"

# SSH crypto dependencies (no_std compatible)
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize"] }
rand_core = { version = "0.6", default-features = false }
